# clazzy

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.sh  conf.ron
clazzy/: Cargo.toml
clazzy/src/: clazzy.rs  error.rs  main.rs  pretty_print.rs  scheduler.rs
clazzy/src/config/: clazz.rs  mod.rs  raw_clazz.rs
clazzy_bot/: Cargo.toml
src/: app.rs  clazz.rs  clazzy.rs  domeplz.rs  error.rs  main.rs  manclazz.rs  notification.rs  pretty_print.rs  raw_clazz.rs  scheduler.rs
src/data/: clazz.rs  mod.rs  raw_clazz.rs
