[package]
name = "school-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
simple_logger = "4.2"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
clokwerk = "0.4"
notify-rust = "4.8.0"
open = "5.0.0"
